--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">
                 <i class="fas fa-book-open me-2"></i>EBook Reader
             </a>
             
@@ -71,29 +71,29 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">
+                        <a class="nav-link" href="{{ url_for('main.index') }}">
                             <i class="fas fa-home me-1"></i>Trang chủ
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('library') }}">
+                        <a class="nav-link" href="{{ url_for('main.library') }}">
                             <i class="fas fa-bookmark me-1"></i>Thư viện của tôi
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('search') }}">
+                        <a class="nav-link" href="{{ url_for('main.search') }}">
                             <i class="fas fa-search me-1"></i>Tìm kiếm
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('upload_book') }}">
+                        <a class="nav-link" href="{{ url_for('main.upload_book') }}">
                             <i class="fas fa-upload me-1"></i>Upload Sách
                         </a>
                     </li>
                 </ul>
                 
                 <!-- Search form -->
-                <form class="d-flex me-3" action="{{ url_for('search') }}" method="GET">
+                <form class="d-flex me-3" action="{{ url_for('main.search') }}" method="GET">
                     <input class="form-control me-2" type="search" name="q" placeholder="Tìm sách..." value="{{ request.args.get('q', '') }}">
                     <button class="btn btn-outline-light" type="submit">
                         <i class="fas fa-search"></i>
@@ -110,15 +110,15 @@
                                 <li><a class="dropdown-item" href="#"><i class="fas fa-user-cog me-2"></i>Hồ sơ</a></li>
                                 <li><a class="dropdown-item" href="#"><i class="fas fa-cog me-2"></i>Cài đặt</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('main.logout') }}"><i class="fas fa-sign-out-alt me-2"></i>Đăng xuất</a></li>
                             </ul>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('login') }}">Đăng nhập</a>
+                            <a class="nav-link" href="{{ url_for('main.login') }}">Đăng nhập</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('register') }}">Đăng ký</a>
+                            <a class="nav-link" href="{{ url_for('main.register') }}">Đăng ký</a>
                         </li>
                     {% endif %}
                 </ul>
