--- a/templates/login.html
+++ b/templates/login.html
@@ -44,7 +44,7 @@
 
                     <div class="text-center">
                         <p class="mb-0">Chưa có tài khoản? 
-                            <a href="{{ url_for('register') }}" class="text-decoration-none">Đăng ký ngay</a>
+                            <a href="{{ url_for('main.register') }}" class="text-decoration-none">Đăng ký ngay</a>
                         </p>
                     </div>
                 </div>
