--- a/templates/read.html
+++ b/templates/read.html
@@ -204,7 +204,7 @@
             <!-- Note Taking -->
             <div class="mt-4">
                 <h5>Thêm ghi chú</h5>
-                <form method="POST" action="{{ url_for('add_note') }}">
+                <form method="POST" action="{{ url_for('main.add_note') }}">
                     <input type="hidden" name="book_id" value="{{ book.book_id }}">
                     <div class="mb-3">
                         <textarea class="form-control" name="content" rows="3" 
