--- a/templates/register.html
+++ b/templates/register.html
@@ -69,7 +69,7 @@
 
                     <div class="text-center">
                         <p class="mb-0">Đã có tài khoản? 
-                            <a href="{{ url_for('login') }}" class="text-decoration-none">Đăng nhập ngay</a>
+                            <a href="{{ url_for('main.login') }}" class="text-decoration-none">Đăng nhập ngay</a>
                         </p>
                     </div>
                 </div>
