--- a/templates/upload_book.html
+++ b/templates/upload_book.html
@@ -112,7 +112,7 @@
                         </div>
 
                         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                            <a href="{{ url_for('index') }}" class="btn btn-secondary me-md-2">
+                            <a href="{{ url_for('main.index') }}" class="btn btn-secondary me-md-2">
                                 <i class="fas fa-times"></i> Hủy
                             </a>
                             <button type="submit" class="btn btn-primary">
